# farm-management-test-task

./: .gitignore  Makefile  README.md  matrix_parser.py
backend/: .dockerignore  .env.example  .env.local  .gitignore  Makefile  entrypoint.sh  pyproject.toml
backend/src/apps/: urls.py
backend/src/apps/farm/: models.py  serializers.py  urls.py  views.py
backend/src/apps/farm/migrations/: 0001_initial.py
backend/src/config/: asgi.py  settings.py  urls.py
deployment/: backend.Dockerfile  docker-compose.local.yml  frontend.Dockerfile
frontend/: .dockerignore  .env.local  .eslintignore  .eslintrc  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.js
frontend/src/: App.tsx
frontend/src/api/: api.helpers.ts  interceptors.ts
frontend/src/components/Header/: index.tsx
frontend/src/hooks/: useModalForm.ts  useSelectTableRows.ts
frontend/src/pages/animals/: index.tsx
frontend/src/services/: animal.service.ts
frontend/src/types/: animal.d.ts
